@@ -1,4 +1,10 @@
-1942 [VideoPlayer] fixed invisible right border on some OS (at least XP). Bug #3177073
+1943 [AVS Script Creator] VideoPlayer preview starts in 1:1 mode
+     [AVS Script Creator] while cropping VideoPlayer preview moves to the cropping border
+     [VideoPlayer] fixed a sizing problem when window was minimized
+     [VideoPlayer] fixed appearing unnecessary scrollbars in 1:1 mode
+     [VideoPlayer] start window in top of other windows (excluding calling window)
+     [Chapter Creator] + [AVS Cutter] VideoPlayer preview respect the "always on top" setting
+1942 [VideoPlayer] fixed invisible right border in some OS (at least XP). Bug #3177073
 1941 [XviD] replaced -lumimasking with -masking (requires xvid 1.3). Feature request #3139141
      [XviD] disabled direct mkv ouput
 1940 [Log] changed version number syntax for MeGUI x64
